fix progressbar width on mobile, 2 decimals on progressbar and searching food

--- a/src/app/calories/components/progress-bar/progress-bar.component.css
+++ b/src/app/calories/components/progress-bar/progress-bar.component.css
@@ -1,4 +1,10 @@
 .p-progressbar-value{
   max-width:100%;
-  min-width:12%;
+  min-width:20%;
+}
+
+@media screen and (min-width: 1000px) {
+  .p-progressbar-value{
+    min-width:12%;
+  }
 }
